test: Added test command to call linkero server

--- a/templates/config_bot_default.json
+++ b/templates/config_bot_default.json
@@ -1,4 +1,5 @@
 {
     "token":"YOUR_TOKEN_FROM_BOTFATHER",
-    "camera_configuration_path":"./templates/cam_configuration.txt"
+    "camera_configuration_path":"./templates/cam_configuration.txt",
+    "server_address":"localhost:5000"
 }
